Fix alignment margin for graph footers

--- a/main.css
+++ b/main.css
@@ -291,7 +291,7 @@ body {
   font-size: 1.5rem;
   justify-content: center;
   line-height: 2.5rem;
-  margin: 1rem 0 3rem 0;
+  margin: 1rem 0 3rem 12%;
   width: 24rem;
 }
 
@@ -310,7 +310,7 @@ body {
   font-weight: 600;
   justify-content: center;
   line-height: 2.5rem;
-  margin: 1rem 0 4rem 18%;
+  margin: 1rem 0 4rem 12%;
   /* padding-left: 2%; */
   text-transform: uppercase;
   width: 24rem;
